Full Screen Mode Toggle

--- a/index.html
+++ b/index.html
@@ -227,6 +227,7 @@
       <div class="menu-close-area" id="menu-close">✖</div>
       <button class="menu-item" id="menu-about">About</button>
       <button class="menu-item" id="menu-help">Help</button>
+      <button class="menu-item" id="menu-fullscreen">🔳 Fullscreen</button>
       
       <!-- Input Method Selection -->
       <div class="menu-section">
