--- a/index.html
+++ b/index.html
@@ -470,15 +470,8 @@
     });
   </script>
 
-  <div id="helpCard" class="hidden">
-    <!-- Your help content here -->
-    <button id="closeHelpBtn">Close</button>
-  </div>
-  <script>
-    document.getElementById('closeHelpBtn').onclick = function() {
-      document.getElementById('helpCard').classList.add('hidden');
-    };
-  </script>
-  <button id="detection-tester-btn">Start Detection Tester</button>
+  <div id="helpCard" class="hidden"></div>
+  <div id="helpCardOverlay" class="hidden"></div>
+
 </body>
 </html>
